[package]
name = "music-remote"
version = "0.0.1"
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/takashiidobe/music-remote"
description = "A Cmus music controller"
documentation = "https://docs.rs/music-remote"

[profile.release]
lto = true
strip = true
codegen-units = 1
